WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256135
[IFC] Negative letter-spacing breaks "-webkit-box-decoration-break: clone"
https://bugs.webkit.org/show_bug.cgi?id=256135
Summary
[IFC] Negative letter-spacing breaks "-webkit-box-decoration-break: clone"
alan
Reported
2023-04-29 13:48:06 PDT
ssia
Attachments
Test reduction
(303 bytes, text/html)
2023-04-29 13:53 PDT
,
alan
no flags
Details
[fast-cq]Patch
(7.16 KB, patch)
2023-04-29 15:09 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Fixed right padding
(1.17 MB, image/png)
2023-04-29 15:11 PDT
,
alan
no flags
Details
iOS16.6. Bug Negative letter-spacing breaks "-webkit-box-decoration-break: clone"
(753.64 KB, image/png)
2023-08-03 00:31 PDT
,
Kian Dept
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-04-29 13:48:42 PDT
Cloned from
https://bugs.webkit.org/show_bug.cgi?id=255036#c12
alan
Comment 2
2023-04-29 13:48:56 PDT
seen on
https://www.conservatives.com/news/2023/budget23--your-priorities-are-our-priorities
Radar WebKit Bug Importer
Comment 3
2023-04-29 13:49:37 PDT
<
rdar://problem/108701795
>
alan
Comment 4
2023-04-29 13:53:50 PDT
Created
attachment 466142
[details]
Test reduction
alan
Comment 5
2023-04-29 15:09:08 PDT
Created
attachment 466143
[details]
[fast-cq]Patch
alan
Comment 6
2023-04-29 15:11:30 PDT
Created
attachment 466144
[details]
Fixed right padding screenshot with the patch applied.
EWS
Comment 7
2023-04-30 08:35:49 PDT
Committed
263540@main
(f5213fdade06): <
https://commits.webkit.org/263540@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466143
[details]
.
Julian Teare
Comment 8
2023-06-02 06:19:17 PDT
Hi @zalan, just downloaded iOS16.5 to my iPhone, it seems that your patch hasn't been applied. Please confirm when the fix will be released to production? Many thanks Julian
alan
Comment 9
2023-06-29 16:48:45 PDT
This fix is supposed to be available in the beta release.
Julian Teare
Comment 10
2023-06-30 03:40:56 PDT
Legend, thanks very much @zalan.
Kian Dept
Comment 11
2023-08-03 00:31:03 PDT
Created
attachment 467188
[details]
iOS16.6. Bug Negative letter-spacing breaks "-webkit-box-decoration-break: clone"
Kian Dept
Comment 12
2023-08-03 00:32:42 PDT
Comment on
attachment 467188
[details]
iOS16.6. Bug Negative letter-spacing breaks "-webkit-box-decoration-break: clone" @zalan thx, but it's still not working on iOS16.6
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug