[IFC] Negative letter-spacing breaks "-webkit-box-decoration-break: clone" https://bugs.webkit.org/show_bug.cgi?id=256135 <rdar://problem/108701795>

Reviewed by Antti Koivisto.

Trailing decoration was not taken into account when accumulating text content width for content with negative letter spacing.
Let's move out m_contentLogicalWidth logic from [add new], [expand last with/without letter spacing] branches so that introducing a new
branch would not result in the same error.

* LayoutTests/fast/inline/webkit-box-decoration-clone-with-negative-letter-spacing-expected.html: Added.
* LayoutTests/fast/inline/webkit-box-decoration-clone-with-negative-letter-spacing.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::appendTextContent):

Canonical link: https://commits.webkit.org/263540@main